change google api key && add google verification

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkBGagquSBBCQz-r1QzClqcqNiVaNaexU&libraries=places"></script>
   <meta charset="UTF-8">
-  <meta name="google-site-verification" content="mO7uLputbNeCWVFmCNyfmeFK7Kcy1cXeevXdwLzLtVI" />
+  <!-- <meta name="google-site-verification" content="mO7uLputbNeCWVFmCNyfmeFK7Kcy1cXeevXdwLzLtVI" /> -->
   <meta name="google-site-verification" content="google0d778297a4b25e8a.html"/>
   <meta name="description" content="Astro description">
   <meta name="viewport" content="width=device-width">
