redirection on app store and play store

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=map-key&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=map-key&libraries=places"></script>
   <meta charset="UTF-8">
   <!-- <meta name="google-site-verification" content="mO7uLputbNeCWVFmCNyfmeFK7Kcy1cXeevXdwLzLtVI" /> -->
-  <meta name="google-site-verification" content="google0d778297a4b25e8a.html"/>
+  <meta name="google-site-verification" content="google0d778297a4b25e8a.html" />
   <meta name="description" content="Astro description">
   <meta name="viewport" content="width=device-width">
   <meta name="google-adsense-account" content="ca-pub-1581715996701650">
@@ -256,7 +255,8 @@
         <div class="flex items-center gap-1"> <span> <i class="fa-solid fa-phone" style="color: #3C3E83;"></i> </span>
           <span>
             <p class="text-primary font-bold text-md lg:text-xl"> +1 (877) 368-3569 </p>
-          </span> </div>
+          </span>
+        </div>
       </div>
     </div>
     <div class="right-section w-full flex items-center justify-center"> <img src="/images/LearnMore/learnmore.jpg"
